Hopefully fixed all social spacing.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -201,4 +201,9 @@ footer {
 .social li {
     display: inline-block;
     font-size: 1px;
+    padding-left: 20px;
+}
+
+#reddit-share {
+    padding-left: 0px;
 }
